<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gitatme.waterwhere.view.LoginFragment">


    <TextView
        android:id="@+id/login_textview"
        android:text="@string/login_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textSize="50sp"
        android:textColor="@android:color/black"
        android:fontFamily="sans-serif-black"
        android:textStyle="bold"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/login_textview"
        android:layout_alignLeft="@+id/login_textview"
        android:layout_alignStart="@+id/login_textview"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_textinputlayout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_edittext_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_email"
                android:inputType="textWebEmailAddress"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_textinputlayout_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/login_edittext_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_edittext_pass"
                android:inputType="textPassword"/>

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:gravity="center">

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/login_button_login"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/login_button_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="17sp"
                android:textColor="@android:color/black"
                android:text="@string/login_button_cancel"
                android:layout_margin="5dp"/>

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
